--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.okenshields</groupId>
+  <groupId>com.github.okenshields</groupId>
   <artifactId>fangkuai</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
